src/test/ui/consts/const-eval/mod-static-with-const-fn.stderr
error[E0658]: statements in statics are unstable (see issue #48821)
  --> $DIR/mod-static-with-const-fn.rs:27:5
   |
LL |     *FOO.0.get() = 5;
   |     ^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
